Fix summary triangle showing on Safari

--- a/internal/glance/static/main.css
+++ b/internal/glance/static/main.css
@@ -552,6 +552,10 @@ kbd:active {
     z-index: 1;
 }
 
+.summary::-webkit-details-marker {
+    display: none;
+}
+
 .details[open] .summary {
     margin-bottom: .8rem;
 }
